--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 * {
-    font-family: 'Trebuchet MS','Tahoma','Verdana','Georgia', 'Arial' ,'Times New Roman', 'Helvetica';
+    font-family: 'Open Sans', sans-serif;
 }
 
 body {
